--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -518,9 +518,11 @@ header{
         border: 2px solid RGBA(25,25,25,0.2 ); 
 
         @media (max-width: 992px){
-            display: flex;
-            align-items: center;
-            padding: 0;
+            display: grid;
+            grid-template-rows: 1fr ;
+            gap: 15px;
+            
+            
             
             
             
@@ -541,6 +543,8 @@ header{
             @media (max-width: 992px){
                 display: block;
                 padding-right: 10px;
+                justify-items: start;
+                
 
                 
                 
@@ -588,6 +592,8 @@ header{
                 font-size: 16px;
                 width: 400px;
                 height: 56px;
+
+                
         
             }
         
@@ -602,6 +608,7 @@ header{
                  gap: 20px;
                  margin: 10px;
                  grid-template-columns: 2fr;
+                 
                              
             }
             
@@ -974,7 +981,7 @@ header{
 
         @media (max-width: 992px){
             flex-direction: column;
-            align-items: flex-start;
+            
             
                          
         }
