--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -21,6 +21,7 @@ html, body{
         margin-left: 5px;
         font-size: 1em;
     }
+    
     &:hover{
         background-color: #191919;
         border: 1px solid;
@@ -37,7 +38,7 @@ html, body{
     font-weight: 600;
     border-radius: 25px;
     font-size: 16px;
-
+    
     i {
         margin-left: 5px;
         font-size: 1em;
@@ -412,6 +413,11 @@ header{
         position: relative;
 
         .content{
+
+            @media(max-width: 776px) {
+                display: grid;
+                gap: 5px;
+            }
                 
             h1{
                 font-family: 'DM Sans', sans-serif;
@@ -435,6 +441,8 @@ header{
 
                 @media (min-width: 768px){
                     font-size: 20px;
+                    
+                    
             
                 }
     
@@ -444,11 +452,16 @@ header{
                 margin-right: 10px;
                 padding-top: 15px;
                 padding-bottom: 15px;
+                
 
                 @media (min-width: 600px){
                     font-size: 20px;
                     display: inline-block;
                     margin-bottom: 20px;
+                    
+                   
+                    
+                    
             
                 }
 
@@ -489,13 +502,24 @@ header{
             padding-top: 72px;
             padding-bottom: 80px;
 
-            @media (max-width: 992px){
+            @media (max-width: 1200px){
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
                 
                 
                  
             } 
+
+            @media (max-width: 768px){
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 50px;
+                
+                
+                 
+            } 
+
+            
             
                
 
@@ -517,17 +541,11 @@ header{
         padding-bottom: 80px;
         border: 2px solid RGBA(25,25,25,0.2 ); 
 
-        @media (max-width: 992px){
+        @media (max-width: 1200px){
             display: grid;
-            grid-template-rows: 1fr ;
-            gap: 15px;
-            
-            
-            
-            
-            
-            
-            
+            grid-template-rows: 1fr;
+            justify-items: center;
+            gap: 30px;
         }
         
         
@@ -543,15 +561,14 @@ header{
             @media (max-width: 992px){
                 display: block;
                 padding-right: 10px;
-                justify-items: start;
+                justify-items: center;
+                padding: 0px;
+                margin-bottom: 10px;
                 
-
-                
-                
-                
-                
-                
-            } 
+ 
+            }
+            
+            
             
         
             
@@ -564,7 +581,10 @@ header{
                 color: #f94d1c;
                 margin-bottom: 0px;
 
+            }
 
+            @media (max-width: 1200px){
+                margin-top: 20px;
             }
 
             h3{
@@ -604,6 +624,7 @@ header{
             grid-template-columns: 1fr 1fr;
             padding-left: 10px;
             
+            
             @media (max-width: 992px){
                  gap: 20px;
                  margin: 10px;
@@ -611,6 +632,14 @@ header{
                  
                              
             }
+
+            @media (max-width: 1200px){
+                gap: 20px;
+                margin: 20px;
+                grid-template-rows: 1fr;
+                
+                            
+           }
             
 
             .iconStack{
@@ -638,6 +667,8 @@ header{
                     color: rgba(25,25,25,0.7 );
 
                 }
+
+                
             }
 
         }
@@ -652,7 +683,7 @@ header{
         justify-content: center;
         position: relative;
 
-        @media (max-width: 992px){
+        @media (max-width: 1200px){
             display: block;
             
             
@@ -665,7 +696,7 @@ header{
             margin-left: 50px;
             margin-right: 170px;
 
-            @media (max-width: 992px){
+            @media (max-width: 1200px){
                 margin-left: 0;
                 width: 50%;
                 
@@ -680,14 +711,14 @@ header{
             left: 27px;
             top: 160px;
 
-            @media (max-width: 992px){
+            @media (max-width: 1200px){
                 left: 0;
                 
                 
             } 
 
             img{
-                @media (max-width: 992px){
+                @media (max-width: 1200px){
                     width: 25%;
                     left: 0;
                     
@@ -709,7 +740,7 @@ header{
             height: 180px;
             width: 400px;
 
-            @media (max-width: 992px){
+            @media (max-width: 1200px){
                 display: block;
                 top: 29%;
                 left: 30%;
@@ -717,6 +748,20 @@ header{
 
                 
                 
+            }
+            
+            @media (max-width: 768px){
+                display: block;
+                top: 29%;
+                left: 30%;
+                height: auto;
+                width: 50%;
+                position: relative;
+                left: 0;
+                margin-top: 20px;
+                
+                
+                 
             } 
 
             
@@ -1133,12 +1178,23 @@ header{
                 width: 90%;
                 height: auto;
 
+                
+
                 @media (max-width: 992px){
-                    width: 55%;
+                    width: 60%;
                     position: static;
                     padding-left: 40px;
                     margin-bottom: 40px;
                                  
+                }
+
+                @media (max-width: 776px){
+                    width: 60%;
+                    position: static;
+                    padding-left: 40px;
+                    margin-bottom: 40px;
+                    
+                            
                 }
                 
             }
@@ -1151,12 +1207,29 @@ header{
                 width: 884px;
                 height: 398px;
 
+                @media (max-width: 1200px){
+                    margin-left: 10px;
+                    height: 298px;
+                    
+                                
+               }
+
+                
+
                 @media (max-width: 992px){
-                    width: 442px;
-                    height: 197px;
+                    width: 412px;
+                    height: 200px;
                     top: 16%;
                                 
                }
+
+               @media (max-width: 696px){
+                    width: 290px;
+                    height: 140px;
+                    top: 16%;
+                    
+                            
+                }
                 
                 
             }
@@ -1469,6 +1542,8 @@ header{
     
     
     .container{
+
+    
         
         .topTest{
             font-family: "Inter";
@@ -1479,8 +1554,13 @@ header{
             text-align: center;
             color: #f94d1c;
             margin-top: 60px;
+
+            
+            
     
         }
+
+        
     
         h3{
             text-align: center;
@@ -1491,8 +1571,12 @@ header{
             font-style: normal;
             text-align: center;
             color: #191919;
+
+            
     
         }
+
+        
     
         .testimonials-stack{
             display: grid;
@@ -1504,11 +1588,15 @@ header{
                 grid-template-columns: 1fr 1fr;
                 grid-template-rows: auto 1fr auto;
                 gap: 30px;
-                
-                
-                
-                
-                             
+                                
+            }
+
+            @media (max-width: 638px){
+                grid-template-columns: 1fr;
+                grid-template-rows: auto 1fr auto;
+                gap: 30px;
+                justify-content: center;
+                                
             }
             
     
@@ -1839,6 +1927,8 @@ header{
     background-image: url(/IMG/Element\ \(1\).png);
     background-repeat: no-repeat;
     background-position: 100% 80%;
+
+    
     
 
     
@@ -1965,6 +2055,17 @@ header{
         display: flex;
         justify-content: space-between;
         margin-top: 20px;
+
+        @media (max-width: 1200px){
+            display: grid;
+            
+            
+              
+        }
+
+
+
+ 
         
         
         
@@ -1972,6 +2073,15 @@ header{
         .picture-text-div{
             width: 35%;
             margin-right: 10%;
+
+            @media (max-width: 1200px){
+                margin-right: 0%;
+                width: 80%;
+                
+                  
+            }
+
+            
 
             img{
                 margin-bottom: 28px;
@@ -1999,6 +2109,23 @@ header{
             height: auto;
             gap: 25px;
             margin-top: 25px;
+            white-space: nowrap;
+
+            @media (max-width: 1200px){
+                grid-template-columns: 1fr 1fr;
+                
+                
+                grid-template-rows: auto 1fr auto;
+            
+            }
+
+            @media (max-width: 500px){
+                display: contents;
+                
+                  
+            }
+
+            
             
 
             
@@ -2010,7 +2137,7 @@ header{
                     display: flex;
                     flex-direction: column;
                     
-                    width: 100%;
+                    
                     
                     
                     h4{
@@ -2059,6 +2186,11 @@ header{
         left: 67%;
         top: 79%;
         pointer-events: none;
+
+        @media (max-width: 992px){
+            display: none;
+                         
+        }
     }
     
 }
